# Claude-enhances-Long-Context-with-LanceDB

./: .gitignore  CLAUDE.md  README.md
Docs/: Integrating-LanceDB-with-Claude-Code-CLI.md
agents/: config.py  orchestrator.py  pyproject.toml  test_acceptance.py  test_agents.py
agents/agents/: __init__.py  __main__.py  indexer.py  qa.py  reviewer.py  searcher.py
agents/prompts/: indexer.md  orchestrator.md  qa.md  reviewer.md  searcher.md
lancedb-mcp-server/: .dockerignore  Dockerfile  chunker.py  config.py  docker-compose.yml  errors.py  indexer.py  projects.py  pyproject.toml  server.py  test_acceptance.py  test_integration.py
lancedb-mcp-server/scripts/: prefetch_model.py
