[project]
name = "lancedb-agent-team"
version = "0.1.0"
description = "Claude Agent SDK agent team for LanceDB semantic code search"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "config.py", "orchestrator.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
