[project]
name = "lancedb-code-mcp"
version = "0.1.0"
description = "LanceDB MCP server for semantic code search in Claude Code CLI"
requires-python = ">=3.10"
dependencies = [
    "lancedb>=0.21.2",
    "mcp[cli]>=1.6.0",
    "sentence-transformers>=4.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
all-languages = [
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
]

[project.scripts]
lancedb-code-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
